# total-recall

./: .gitignore  CLAUDE.md  README.md  eval_queries.jsonl  eval_queries_ag.jsonl  pyproject.toml
docs/: classes.mmd  packages.mmd  seq_eval.mmd  seq_indexer.mmd  seq_pipeline.mmd
scripts/: run_eval.py  run_indexer.py  run_pipeline.py
src/: main_indexer.py  main_pipeline.py  main_ret_eval.py  rag_indexer.py  rag_pipeline.py  rag_reranker.py  rag_ret_eval.py  rag_retriever.py  rag_service_predictor.py
src/ir/: config.py  evaluator.py  indexer.py  pipeline.py  reranker.py  retriever.py  service_predictor.py
src/ir/qr/: query_writer.py
src/qr/: query_writer.py
tests/: test_evaluator.py  test_indexer.py  test_retriever.py
