[project]
name = "ir"
version = "0.1.0"
description = "AWS Documentation RAG System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "nltk>=3.9.3",
    "numpy>=2.4.3",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ir"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ir --cov-report=term-missing"

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
ignore_missing_imports = true
